# surro-mcp

./: .gitignore  LICENSE  README.md
python/: README.md  pyproject.toml
python/src/surro/: __init__.py  _http.py  async_client.py  client.py  exceptions.py  types.py
python/tests/: conftest.py  test_async_client.py  test_sync_client.py
typescript/: README.md  package.json
typescript/src/: api-client.ts  index.ts
typescript/tests/: tools.test.ts
